# dovydas-trading-system

./: .env.example  .gitignore  PROJECT_SPECIFICATION_V1.md  PROJECT_VISION_ADDENDUM_V1.md  README.md  pyproject.toml
config/: mcp.json.example
docs/: ARCHITECTURE_AND_ROADMAP_V1.md  CURRENT_SYSTEM_AUDIT_V1.md  README.md  REPOSITORY_MAP.md  SETUP.md  analysis-notes.md
docs/AI_HANDOFF/: CURRENT_STATE.md  START_HERE_FOR_AI.md
prompts/: swing-trading-analyzer-v3.md
scripts/: tradingview-launcher.sh
src/fmis/: __init__.py
src/fmis/data/: __init__.py  _timeutils.py  alignment.py  models.py  observation.py
src/fmis/features/: __init__.py  registry.py  types.py
src/fmis/features/feature_engine/: __init__.py  engine.py
src/fmis/features/indicators/: __init__.py  atr.py  ema.py  ema_math.py  macd.py  rsi.py  sources.py
src/fmis/features/market_structure/: __init__.py
src/fmis/features/momentum/: __init__.py
src/fmis/features/pattern_detection/: __init__.py
src/fmis/features/support_resistance/: __init__.py
src/fmis/features/trend/: __init__.py
src/fmis/features/volatility/: __init__.py
src/fmis/features/volume/: __init__.py
tests/: test_alignment.py  test_atr.py  test_data_models.py  test_ema.py  test_ema_math.py  test_features_architecture.py  test_macd.py  test_observation.py  test_rsi.py  test_smoke.py
tests/fixtures/: btcusdt_4h.json
